# agent-flight-recorder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agent_flight_recorder/: __init__.py  cli.py  git_utils.py  report.py  risk.py  secrets.py  store.py  time_utils.py
tests/: test_cli.py  test_report.py  test_risk.py  test_secrets.py
