[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "Local-first flight recorder for AI coding agent sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Agent Flight Recorder contributors" }
]
license = { text = "MIT" }
keywords = ["ai", "agents", "audit", "git", "mcp", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Security"
]

[project.scripts]
agent-recorder = "agent_flight_recorder.cli:main"
afr = "agent_flight_recorder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

